Add feature calc total value   - Add method total_value

--- a/app/views/contracts/show.html.erb
+++ b/app/views/contracts/show.html.erb
@@ -5,5 +5,6 @@
 <%= @contract.rental_period.description %><br>
 <%= @contract.payment_method %><br>
 <%= @contract.devolution_date %><br>
-<%= @contract.delivery_address %>
+<%= @contract.delivery_address %><br>
+<%= @contract.total_value %><br>
 <%= link_to 'Voltar', contracts_path %>
