Add association customer has many contracts

--- a/app/views/contracts/new.html.erb
+++ b/app/views/contracts/new.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for @contract do |f| %>
-  <%= f.input :customer %>
+  <%= f.association :customer %>
   <%= f.input :equipment  %>
   <%= f.input :time  %>
   <%= f.input :payment_method  %>
