--- a/app/views/contracts/show.html.erb
+++ b/app/views/contracts/show.html.erb
@@ -1,4 +1,4 @@
-<%= @contract.customer %>
+<%= @contract.customer.name %>
 <%= @contract.equipment %>
 <%= @contract.time %>
 <%= @contract.payment_method %>
