add associantion equipments started

--- a/app/views/contracts/new.html.erb
+++ b/app/views/contracts/new.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for @contract do |f| %>
   <%= f.association :customer %>
-  <%= f.input :equipment  %>
+  <%= f.association :equipment  %>
   <%= f.input :time  %>
   <%= f.input :payment_method  %>
   <%= f.input :devolution_date %>
