--- a/app/views/equipment/new.html.erb
+++ b/app/views/equipment/new.html.erb
@@ -7,5 +7,5 @@
  <%= f.input :asset_number, label: "Patrimônio: " %>
  <%= f.input :purchased_at, label: "Data da compra: ", as: :date, html5: true %>
  <%= f.input :acquisition_price, label: "Preço do equipamento: " %>
- <%= f.button :submit, value: "Cadastrar equipamento: " %>
+ <%= f.button :submit, value: "Cadastrar equipamento" %>
 <%end%>
