--- a/app/views/contracts/show.html.erb
+++ b/app/views/contracts/show.html.erb
@@ -1,6 +1,7 @@
 <%= @contract.customer.name %>
-<%= @contract.equipment %>
-<%= @contract.time %>
+<% @contract.equipment.each do |e| %>
+  <%= e.name %>
+<% end %>
+<%= @contract.rental_period.description %>
 <%= @contract.payment_method %>
-<%= @contract.devolution_date %>
 <%= @contract.delivery_address %>
