--- a/app/views/prices/new.html.erb
+++ b/app/views/prices/new.html.erb
@@ -1,7 +1,11 @@
 <p class="error"><%= flash[:error] %></p>
 <%= simple_form_for @price do |f| %>
   <%= f.association :equipment, label_method: :name, value_method: :id %>
-  <%= f.input :time, collection: ['3 dias', '5 dias', 'semanal', 'quinzenal', 'mensal'] %>
+  <%= f.input :time, collection: [['3 dias',3],
+                                  ['5 dias',5],
+                                  ['semana',7],
+                                  ['quinzena',15],
+                                  ['mês',30]] %>
   <%= f.input :total %>
-  <%= f.button :submit, "Salvar Preço" %>
+  <%= f.button :submit, 'Salvar Preço' %>
 <% end %>
