--- a/app/views/prices/show.html.erb
+++ b/app/views/prices/show.html.erb
@@ -1,3 +1,3 @@
-<%= @price.equipment.name %>
-<%= @price.time %>
-<%= @price.total %>
+<%= @price.equipment.name %><br>
+<%= @price.time %><br>
+<%= @price.total %><br>
