--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,8 +1,9 @@
 <h1><%= @customer.name %></h1>
-<p><%= @customer.cpf %></p>
-<p><%= @customer.address %></p>
-<p><%= @customer.rg %></p>
-<p><%= @customer.phone %></p>
-<p><%= @customer.cell %></p>
-<p><%= @customer.email %></p>
-<p><%= @customer.birthdate %></p>
+<%= @customer.cpf %>
+<%= @customer.address %>
+<%= @customer.rg %>
+<%= @customer.phone %>
+<%= @customer.cell %>
+<%= @customer.email %>
+<%= @customer.birthdate %>
+<%= link_to 'Voltar', customers_path %>
