--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -1,4 +1,3 @@
-
 <%= @equipment.name %><br>
 <%= @equipment.mark %><br>
 <%= @equipment.supplier %><br>
@@ -7,3 +6,4 @@
 <%= @equipment.asset_number %><br>
 <%= @equipment.purchased_at %><br>
 <%= @equipment.acquisition_price %><br>
+<%=link_to 'Voltar', equipment_index_path %>
