Feature: list suppliers

--- a/app/views/suppliers/show.html.erb
+++ b/app/views/suppliers/show.html.erb
@@ -1,10 +1,11 @@
 <h1><%= @supplier.name %></h1>
-<p><%= @supplier.address %></p>
-<p><%= @supplier.cnpj %></p>
-<p><%= @supplier.account_manager %></p>
-<p><%= @supplier.company_name %></p>
-<p><%= @supplier.email %></p>
-<p><%= @supplier.phone %></p>
-<p><%= @supplier.website %></p>
-<p><%= @supplier.municipal_registration %></p>
-<p><%= @supplier.state_registration %></p>
+<%= @supplier.address %>
+<%= @supplier.cnpj %>
+<%= @supplier.account_manager %>
+<%= @supplier.company_name %>
+<%= @supplier.email %>
+<%= @supplier.phone %>
+<%= @supplier.website %>
+<%= @supplier.municipal_registration %>
+<%= @supplier.state_registration %>
+<%= link_to 'Voltar', suppliers_path %>
