Add devolution date show contract

--- a/app/views/contracts/show.html.erb
+++ b/app/views/contracts/show.html.erb
@@ -4,4 +4,5 @@
 <% end %>
 <%= @contract.rental_period.description %>
 <%= @contract.payment_method %>
+<%= @contract.devolution_date %>
 <%= @contract.delivery_address %>
