feature: user list contracts

--- a/app/views/contracts/show.html.erb
+++ b/app/views/contracts/show.html.erb
@@ -6,3 +6,4 @@
 <%= @contract.payment_method %><br>
 <%= @contract.devolution_date %><br>
 <%= @contract.delivery_address %>
+<%= link_to 'Voltar', contracts_path %>
