--- a/app/views/contracts/new.html.erb
+++ b/app/views/contracts/new.html.erb
@@ -1,8 +1,12 @@
 <%= simple_form_for @contract do |f| %>
   <%= f.association :customer, label: 'Cliente:' %>
   <%= f.association :equipment, label: 'Equipamento(s):', as: :check_boxes  %>
-  <%= f.association :rental_period, label: 'Prazo de locação:', label_method: :description, value_method: :id %>
-  <%= f.input :payment_method, label: 'Forma de pagamento:'  %>
+  <%= f.association :rental_period,
+      label: 'Prazo de locação:',
+      label_method: :description, value_method: :id %>
+  <%= f.input :payment_method,
+      collection: ['Á vista', 'Faturado', 'Boleto', 'Débito', 'Crédito'],
+      as: :radio_buttons, label: 'Forma de pagamento'%>
   <%= f.input :delivery_address, label: 'Endereço de entrega:'  %>
   <%= f.button :submit, "Criar Contrato" %>
 <% end %>
