Add validates create new rental period

--- a/app/views/rental_periods/new.html.erb
+++ b/app/views/rental_periods/new.html.erb
@@ -1,3 +1,4 @@
+<%= flash[:error] %>
 <%= simple_form_for @rental_period do |f| %>
   <%= f.input :description, label: "Descrição" %>
   <%= f.input :period, label: "Prazo em dias" %>
