--- a/app/views/equipment/new.html.erb
+++ b/app/views/equipment/new.html.erb
@@ -1,11 +1,2 @@
-<%= simple_form_for @equipment do |f|%>
- <%= f.input :name, label: "Nome: " %>
- <%= f.input :mark, label: "Marca: " %>
- <%= f.input :supplier, label: "Fornecedor: " %>
- <%= f.input :price, label: "Preço de locação: " %>
- <%= f.input :model, label: "Modelo: " %>
- <%= f.input :asset_number, label: "Patrimônio: " %>
- <%= f.input :purchased_at, label: "Data da compra: ", as: :date, html5: true %>
- <%= f.input :acquisition_price, label: "Preço do equipamento: " %>
- <%= f.button :submit, value: "Cadastrar equipamento" %>
-<%end%>
+<h1>CADASTRAR EQUIPAMENTO</h1>
+<%= render partial: "form", locals: {message: 'Cadastrar equipamento'} %>
