Correções de rubocop e review da branch

--- a/app/views/equipment_categories/show.html.erb
+++ b/app/views/equipment_categories/show.html.erb
@@ -1,3 +1,4 @@
 <h1><%= @equipment_category.name %></h1>
 <%= @equipment_category.model %><br>
+<%= @equipment_category.mark %><br>
 <%= link_to 'Voltar', equipment_categories_path %>
