--- a/app/views/equipment_categories/new.html.erb
+++ b/app/views/equipment_categories/new.html.erb
@@ -1,5 +1,6 @@
 <%= simple_form_for @equipment_category do |f|%>
  <%= f.input :name, label: "Tipo: " %>
  <%= f.input :model, label: "Modelo: " %>
+ <%= f.input :mark, label: "Marca: " %>
  <%= f.button :submit, value: "Cadastrar categoria" %>
 <% end %>
