Integração de equipment_category com equipment

--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -1,8 +1,6 @@
-<%= @equipment.name %><br>
-<%= @equipment.mark %><br>
+<%= @equipment.equipment_category %><br>
 <%= @equipment.supplier %><br>
 <%= @equipment.price %><br>
-<%= @equipment.model %><br>
 <%= @equipment.asset_number %><br>
 <%= @equipment.purchased_at %><br>
 <%= @equipment.acquisition_price %><br>
