--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -1,3 +1,3 @@
 <% @equipment.each do |equipment| %>
-  <%= link_to equipment.name, equipment %><br>
+  <%= link_to "#{equipment.description}", equipment %>
 <% end %>
