--- a/app/views/equipment/new.html.erb
+++ b/app/views/equipment/new.html.erb
@@ -1,9 +1,9 @@
+<h1>CADASTRAR EQUIPAMENTO</h1>
 <%= simple_form_for @equipment do |f|%>
- <%= f.input :name, label: "Nome: " %>
- <%= f.input :mark, label: "Marca: " %>
+ <%= f.association :equipment_category, label: 'Equipamento:',
+     label_method: :to_s, value_method: :id %>
  <%= f.input :supplier, label: "Fornecedor: " %>
  <%= f.input :price, label: "Preço de locação: " %>
- <%= f.input :model, label: "Modelo: " %>
  <%= f.input :asset_number, label: "Patrimônio: " %>
  <%= f.input :purchased_at, label: "Data da compra: ", as: :date, html5: true %>
  <%= f.input :acquisition_price, label: "Preço do equipamento: " %>
