--- a/app/views/equipment_categories/index.html.erb
+++ b/app/views/equipment_categories/index.html.erb
@@ -1,5 +1,3 @@
 <% @equipment_categories.each do |equipment_category| %>
-  <%= link_to "##{equipment_category.id} -
-                #{equipment_category.name} -
-                #{equipment_category.mark}", equipment_category %>
+  <%= link_to equipment_category, equipment_category %>
 <% end %>
