--- a/app/views/prices/show.html.erb
+++ b/app/views/prices/show.html.erb
@@ -1,3 +1,3 @@
-<%= @price.equipment %><br>
+<%= @price.equipment_category %><br>
 <%= @price.rental_period.description %><br>
 <%= @price.total %><br>
