--- a/app/views/contracts/new.html.erb
+++ b/app/views/contracts/new.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for @contract do |f| %>
   <%= f.association :customer, label: 'Cliente:' %>
-  <%= f.association :equipment, label: 'Equipamento(s):',
+  <%= f.association :equipment, collection: @equipment, label: 'Equipamento(s):',
       label_method: :to_s, as: :check_boxes  %>
   <%= f.association :rental_period,
       label: 'Prazo de locação:',
