--- a/app/views/equipment/new.html.erb
+++ b/app/views/equipment/new.html.erb
@@ -1,11 +1,2 @@
 <h1>CADASTRAR EQUIPAMENTO</h1>
-<%= simple_form_for @equipment do |f|%>
- <%= f.association :equipment_category, label: 'Equipamento:',
-     label_method: :to_s, value_method: :id %>
- <%= f.input :supplier, label: "Fornecedor: " %>
- <%= f.input :price, label: "Preço de locação: " %>
- <%= f.input :asset_number, label: "Patrimônio: " %>
- <%= f.input :purchased_at, label: "Data da compra: ", as: :date, html5: true %>
- <%= f.input :acquisition_price, label: "Preço do equipamento: " %>
- <%= f.button :submit, value: "Cadastrar equipamento" %>
-<%end%>
+<%= render partial: "form", locals: { label_button: 'Cadastrar equipamento' }  %>
